@@ -13,7 +13,6 @@ import org.junit.runners.*;
 import java.util.*;
 
 @SuppressWarnings("DataFlowIssue")
-@RunWith(JUnit4.class)
 public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
     @Test
     public void test_let_val_files() {
@@ -22,13 +21,13 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements let/val", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements let/val", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare let/val", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare let/val", markers.getFirst().getLineMarkerTooltip());
     }
 
     @Test
@@ -37,11 +36,11 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
                 module type I = sig
                   val x: int
                 end
-                                
+                
                 module M1 : I = struct
                   let x = 1
                 end
-                                
+                
                 module M2 : I = struct
                   let x = 2
                 end
@@ -50,12 +49,12 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
         List<LineMarkerInfo<?>> markers = doHighlight(f);
         assertSize(6, markers);
 
-        RelatedItemLineMarkerInfo<?> m0 = (RelatedItemLineMarkerInfo<?>) markers.get(0);
+        RelatedItemLineMarkerInfo<?> m0 = (RelatedItemLineMarkerInfo<?>) markers.getFirst();
         assertEquals(ORIcons.IMPLEMENTED, m0.getIcon());
         assertEquals("Implements module", m0.getLineMarkerTooltip());
         List<? extends GotoRelatedItem> m0Targets = new ArrayList<>(m0.createGotoRelatedItems());
         assertSize(2, m0Targets);
-        assertInstanceOf(m0Targets.get(0).getElement(), RPsiInnerModule.class);
+        assertInstanceOf(m0Targets.getFirst().getElement(), RPsiInnerModule.class);
         assertInstanceOf(m0Targets.get(1).getElement(), RPsiInnerModule.class);
 
         RelatedItemLineMarkerInfo<?> m1 = (RelatedItemLineMarkerInfo<?>) markers.get(1);
@@ -63,7 +62,7 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
         assertEquals("Implements let/val", m1.getLineMarkerTooltip());
         List<? extends GotoRelatedItem> m1Targets = new ArrayList<>(m1.createGotoRelatedItems());
         assertSize(2, m1Targets);
-        assertInstanceOf(m1Targets.get(0).getElement(), RPsiLet.class);
+        assertInstanceOf(m1Targets.getFirst().getElement(), RPsiLet.class);
         assertInstanceOf(m1Targets.get(1).getElement(), RPsiLet.class);
 
         assertEquals(ORIcons.IMPLEMENTING, markers.get(2).getIcon());
@@ -82,7 +81,7 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
         FileBase intf = configureCode("A.mli", "type t");
         FileBase impl = configureCode("A.ml", """
                 type t
-                                
+                
                 module Inner = struct
                   type t
                 end
@@ -90,13 +89,13 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements type", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements type", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare type", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare type", markers.getFirst().getLineMarkerTooltip());
         assertSize(1, markers);
     }
 
@@ -106,11 +105,11 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
                 module type I = struct
                   type t
                 end
-                                
+                
                 module M1 : I = struct
                   type t
                 end
-                                
+                
                 module M2 : I = struct
                   type t
                 end
@@ -118,8 +117,8 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(f);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTED, markers.get(1).getIcon());
         assertEquals("Implements type", markers.get(1).getLineMarkerTooltip());
 
@@ -143,13 +142,13 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements external", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements external", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare external", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare external", markers.getFirst().getLineMarkerTooltip());
     }
 
     @Test
@@ -158,11 +157,11 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
                 module type I = sig
                   external t: int = ""
                 end
-                                
+                
                 module M1 : I = struct
                   external t: int = ""
                 end
-                                
+                
                 module M2 : I = struct
                   external t: int = ""
                 end
@@ -190,8 +189,8 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> lineMarkers = doHighlight(f);
 
-        assertEquals(ORIcons.IMPLEMENTED, lineMarkers.get(0).getIcon());
-        assertEquals("Implements module", lineMarkers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, lineMarkers.getFirst().getIcon());
+        assertEquals("Implements module", lineMarkers.getFirst().getLineMarkerTooltip());
 
         assertEquals(ORIcons.IMPLEMENTING, lineMarkers.get(1).getIcon());
         assertEquals("Declare module", lineMarkers.get(1).getLineMarkerTooltip());
@@ -206,13 +205,13 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare module", markers.getFirst().getLineMarkerTooltip());
     }
 
     @Test
@@ -221,21 +220,25 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
         FileBase impl = configureCode("A.ml", """
                 // ...
                 module type A1 = sig end
-                                
+                
                 module A2 : A1 = struct end
                 """);
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
         assertSize(1, markers);
-
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare module", markers.get(0).getLineMarkerTooltip());
+        assertSize(3, markers);
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals(19, markers.getFirst().startOffset); // A1->A2
+        assertEquals(ORIcons.IMPLEMENTING, markers.get(1).getIcon());
+        assertEquals(19, markers.get(1).startOffset); // A1->A1.mli
+        assertEquals(ORIcons.IMPLEMENTING, markers.get(2).getIcon());
+        assertEquals(40, markers.get(2).startOffset); // A2->A1
     }
 
     @Test
@@ -244,7 +247,7 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
                 module B = struct
                   module type Intf = sig end
                 end
-
+                
                 module IncorrectImpl : Intf = struct end
                 module CorrectImpl : B.Intf = struct end
                 """);
@@ -253,7 +256,7 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> lineMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), myFixture.getProject());
 
-        LineMarkerInfo<?> m0 = lineMarkers.get(0);
+        LineMarkerInfo<?> m0 = lineMarkers.getFirst();
         assertEquals(ORIcons.IMPLEMENTED, m0.getIcon());
         assertEquals("Implements module", m0.getLineMarkerTooltip());
         LineMarkerInfo<?> m1 = lineMarkers.get(1);
@@ -272,8 +275,8 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(f);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
 
         assertEquals(ORIcons.IMPLEMENTING, markers.get(1).getIcon());
         assertEquals("Declare module", markers.get(1).getLineMarkerTooltip());
@@ -291,13 +294,13 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements exception", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements exception", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare exception", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare exception", markers.getFirst().getLineMarkerTooltip());
     }
 
     @Test
@@ -306,7 +309,7 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
                 module type I = sig
                   exception X
                 end
-                                
+                
                 module M : I = struct
                   exception X
                 end
@@ -341,7 +344,7 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
         myFixture.doHighlighting();
 
         List<LineMarkerInfo<?>> lineMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), myFixture.getProject());
-        LineMarkerInfo<?> m0 = lineMarkers.get(0);
+        LineMarkerInfo<?> m0 = lineMarkers.getFirst();
         assertEquals(ORIcons.IMPLEMENTING, m0.getIcon());
         assertEquals("Declare class", m0.getLineMarkerTooltip());
         assertSize(1, lineMarkers);
@@ -389,7 +392,7 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
                  end = struct
                    let x = 1
                  end
-                 """);
+                """);
 
         myFixture.openFileInEditor(mli.getVirtualFile());
         myFixture.doHighlighting();
@@ -409,26 +412,26 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
         // targets definition in signature and implementation in body
         List<? extends GotoRelatedItem> mi1RelatedItems = new ArrayList<>(mi1.createGotoRelatedItems());
         assertSize(2, mi1RelatedItems);
-        assertInstanceOf(mi1RelatedItems.get(0).getElement(), RPsiVal.class);
+        assertInstanceOf(mi1RelatedItems.getFirst().getElement(), RPsiVal.class);
         assertInstanceOf(mi1RelatedItems.get(1).getElement(), RPsiLet.class);
 
-        // val x in A.ml (to mli)
-        LineMarkerInfo<?> m1 = mlMarkers.get(1);
-        assertEquals("Declare let/val", m1.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTING, m1.getIcon());
-        // val x in A.ml
-        LineMarkerInfo<?> m2 = mlMarkers.get(2);
-        assertEquals("Implements let/val", m2.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTED, m2.getIcon());
-        // let in A.ml
-        RelatedItemLineMarkerInfo<?> m3 = (RelatedItemLineMarkerInfo<?>) mlMarkers.get(3);
-        assertTrue(m3.getLineMarkerTooltip().contains("Declare let/val"));
-        assertEquals(ORIcons.IMPLEMENTING, m3.getIcon());
+        assertEquals(ORIcons.IMPLEMENTING, mlMarkers.getFirst().getIcon());
+        assertEquals(7, mlMarkers.getFirst().startOffset); // M->M.mli
+        assertEquals("Declare module", mlMarkers.getFirst().getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, mlMarkers.get(1).getIcon());
+        assertEquals("Implements let/val", mlMarkers.get(1).getLineMarkerTooltip());
+        assertEquals(21, mlMarkers.get(1).startOffset); // x[sig] -> x[impl]
+        assertEquals(ORIcons.IMPLEMENTING, mlMarkers.get(2).getIcon());
+        assertEquals("Declare let/val", mlMarkers.get(2).getLineMarkerTooltip());
+        assertEquals(21, mlMarkers.get(2).startOffset); // x[sig] -> x.rei
+        RelatedItemLineMarkerInfo<?> r3 = (RelatedItemLineMarkerInfo<?>) mlMarkers.get(3);
+        assertTrue(r3.getLineMarkerTooltip().contains("Declare let/val"));
+        assertEquals(ORIcons.IMPLEMENTING, r3.getIcon());
         // targets both definitions (signatures in ml and mli)
-        List<? extends GotoRelatedItem> m3RelatedItems = new ArrayList<>(m3.createGotoRelatedItems());
-        assertSize(2, m3RelatedItems);
-        assertInstanceOf(m3RelatedItems.get(0).getElement(), RPsiVal.class);
-        assertInstanceOf(m3RelatedItems.get(1).getElement(), RPsiVal.class);
+        List<? extends GotoRelatedItem> r3RelatedItems = new ArrayList<>(r3.createGotoRelatedItems());
+        assertSize(2, r3RelatedItems);
+        assertInstanceOf(r3RelatedItems.getFirst().getElement(), RPsiVal.class);
+        assertInstanceOf(r3RelatedItems.get(1).getElement(), RPsiVal.class);
     }
 
     // https://github.com/giraud/reasonml-idea-plugin/issues/485
@@ -444,12 +447,11 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
                 module type MT = sig
                   val x : int
                 end
-                                
+                
                 module Mm: MT = struct
                   let x = 1
                 end
                 """);
-
 
         myFixture.openFileInEditor(mli.getVirtualFile());
         myFixture.doHighlighting();
@@ -463,27 +465,27 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
         assertSize(6, mlMarkers);
 
         // module type in A.mli
-        RelatedItemLineMarkerInfo<?> mi1 = (RelatedItemLineMarkerInfo<?>) mliMarkers.get(0);
+        RelatedItemLineMarkerInfo<?> mi1 = (RelatedItemLineMarkerInfo<?>) mliMarkers.getFirst();
         assertTextEquals("Implements module", mi1.getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTED, mi1.getIcon());
         List<? extends GotoRelatedItem> mi1RelatedItems = new ArrayList<>(mi1.createGotoRelatedItems());
         assertSize(2, mi1RelatedItems);
         assertContainsElements(mi1RelatedItems.stream().map(m -> ((RPsiInnerModule) m.getElement()).getQualifiedName()).toList(), "A.MT", "A.Mm");
         // module type in A.ml
-        LineMarkerInfo<?> m0 = mlMarkers.get(0);
-        assertEquals("Declare module", m0.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTING, m0.getIcon());
+        LineMarkerInfo<?> m0 = mlMarkers.getFirst();
+        assertEquals("Implements module", m0.getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, m0.getIcon());
         LineMarkerInfo<?> m1 = mlMarkers.get(1);
-        assertEquals("Implements module", m1.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTED, m1.getIcon());
+        assertEquals("Declare module", m1.getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, m1.getIcon());
         // val x in module type in A.ml
         LineMarkerInfo<?> m2 = mlMarkers.get(2);
-        assertEquals("Declare let/val", m2.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTING, m2.getIcon());
+        assertEquals("Implements let/val", m2.getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, m2.getIcon());
         // val x in module type in A.ml
         LineMarkerInfo<?> m3 = mlMarkers.get(3);
-        assertEquals("Implements let/val", m3.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTED, m3.getIcon());
+        assertEquals("Declare let/val", m3.getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, m3.getIcon());
         // val x in A.ml (to mli)
         LineMarkerInfo<?> m4 = mlMarkers.get(4);
         assertEquals("Declare module", m4.getLineMarkerTooltip());
@@ -492,7 +494,6 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
         LineMarkerInfo<?> m5 = mlMarkers.get(5);
         assertEquals("Declare let/val", m5.getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTING, m5.getIcon());
-
     }
 
     // https://github.com/giraud/reasonml-idea-plugin/issues/485
@@ -502,7 +503,7 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
                 module type M = sig
                   val x: int
                 end
-                                
+                
                 module M : sig
                   val x: int
                 end = struct
@@ -516,7 +517,7 @@ public class LineMarkerProviderOCLTest extends ORBasePlatformTestCase {
         assertSize(2, lineMarkers);
 
         // val x
-        LineMarkerInfo<?> m0 = lineMarkers.get(0);
+        LineMarkerInfo<?> m0 = lineMarkers.getFirst();
         assertEquals("Implements let/val", m0.getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTED, m0.getIcon());
         // let x
