@@ -19,13 +19,13 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements let/val", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements let/val", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare let/val", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare let/val", markers.getFirst().getLineMarkerTooltip());
     }
 
     @Test
@@ -46,8 +46,8 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(f);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTED, markers.get(1).getIcon());
         assertEquals("Implements let/val", markers.get(1).getLineMarkerTooltip());
 
@@ -75,13 +75,13 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements type", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements type", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare type", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare type", markers.getFirst().getLineMarkerTooltip());
         assertSize(1, markers);
     }
 
@@ -103,8 +103,8 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(f);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTED, markers.get(1).getIcon());
         assertEquals("Implements type", markers.get(1).getLineMarkerTooltip());
 
@@ -128,13 +128,13 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements external", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements external", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare external", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare external", markers.getFirst().getLineMarkerTooltip());
     }
 
     @Test
@@ -176,8 +176,8 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> lineMarkers = doHighlight(f);
 
-        assertEquals(ORIcons.IMPLEMENTED, lineMarkers.get(0).getIcon());
-        assertEquals("Implements module", lineMarkers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, lineMarkers.getFirst().getIcon());
+        assertEquals("Implements module", lineMarkers.getFirst().getLineMarkerTooltip());
 
         assertEquals(ORIcons.IMPLEMENTING, lineMarkers.get(1).getIcon());
         assertEquals("Declare module", lineMarkers.get(1).getLineMarkerTooltip());
@@ -192,13 +192,13 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare module", markers.getFirst().getLineMarkerTooltip());
     }
 
     @Test
@@ -206,22 +206,26 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
         FileBase intf = configureCode("A.resi", "module type A1 = {}");
         FileBase impl = configureCode("A.res", """
                 // ...
-                module type A1 = {};
+                module type A1 = {}
                 
-                module A2 : A1 = {};
+                module A2 : A1 = {}
                 """);
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
         assertSize(1, markers);
-
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare module", markers.get(0).getLineMarkerTooltip());
+        assertSize(3, markers);
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.get(1).getIcon());
+        assertEquals("Declare module", markers.get(1).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.get(2).getIcon());
+        assertEquals("Declare module", markers.get(2).getLineMarkerTooltip());
     }
 
     @Test
@@ -239,7 +243,7 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> lineMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), myFixture.getProject());
 
-        LineMarkerInfo<?> m0 = lineMarkers.get(0);
+        LineMarkerInfo<?> m0 = lineMarkers.getFirst();
         assertEquals(ORIcons.IMPLEMENTED, m0.getIcon());
         assertEquals("Implements module", m0.getLineMarkerTooltip());
         LineMarkerInfo<?> m1 = lineMarkers.get(1);
@@ -258,8 +262,8 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(f);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements module", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements module", markers.getFirst().getLineMarkerTooltip());
 
         assertEquals(ORIcons.IMPLEMENTING, markers.get(1).getIcon());
         assertEquals("Declare module", markers.get(1).getLineMarkerTooltip());
@@ -277,13 +281,13 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
 
         List<LineMarkerInfo<?>> markers = doHighlight(intf);
 
-        assertEquals(ORIcons.IMPLEMENTED, markers.get(0).getIcon());
-        assertEquals("Implements exception", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, markers.getFirst().getIcon());
+        assertEquals("Implements exception", markers.getFirst().getLineMarkerTooltip());
 
         markers = doHighlight(impl);
 
-        assertEquals(ORIcons.IMPLEMENTING, markers.get(0).getIcon());
-        assertEquals("Declare exception", markers.get(0).getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, markers.getFirst().getIcon());
+        assertEquals("Declare exception", markers.getFirst().getLineMarkerTooltip());
     }
 
     @Test
@@ -313,56 +317,56 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
     // Module signature with inline signature
     @Test
     public void test_GH_485_signature_in_different_files() {
-        FileBase rei = configureCode("A.rei", """
+        FileBase resi = configureCode("A.resi", """
                 module M: {
-                  let x: int;
+                  let x: int
                 };
                 """);
-        FileBase re = configureCode("A.re", """
+        FileBase res = configureCode("A.res", """
                 module M: {
-                   let x: int;
+                   let x: int
                  } = {
-                   let x = 1;
+                   let x = 1
                  };
                 """);
 
-        myFixture.openFileInEditor(rei.getVirtualFile());
+        myFixture.openFileInEditor(resi.getVirtualFile());
         myFixture.doHighlighting();
-        List<LineMarkerInfo<?>> reiMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), getProject());
+        List<LineMarkerInfo<?>> resiMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), getProject());
 
-        myFixture.openFileInEditor(re.getVirtualFile());
+        myFixture.openFileInEditor(res.getVirtualFile());
         myFixture.doHighlighting();
-        List<LineMarkerInfo<?>> reMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), getProject());
+        List<LineMarkerInfo<?>> resMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), getProject());
 
-        assertSize(2, reiMarkers);
-        assertSize(4, reMarkers);
+        assertSize(2, resiMarkers);
+        assertSize(4, resMarkers);
 
         // val x in A.rei
-        RelatedItemLineMarkerInfo<?> ri1 = (RelatedItemLineMarkerInfo<?>) reiMarkers.get(1);
+        RelatedItemLineMarkerInfo<?> ri1 = (RelatedItemLineMarkerInfo<?>) resiMarkers.get(1);
         assertEquals("Implements let/val", ri1.getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTED, ri1.getIcon());
         // targets definition in signature and implementation in body
         List<? extends GotoRelatedItem> ri1RelatedItems = new ArrayList<>(ri1.createGotoRelatedItems());
         assertSize(2, ri1RelatedItems);
-        assertInstanceOf(ri1RelatedItems.get(0).getElement(), RPsiLet.class);
+        assertInstanceOf(ri1RelatedItems.getFirst().getElement(), RPsiLet.class);
         assertInstanceOf(ri1RelatedItems.get(1).getElement(), RPsiLet.class);
 
-        // val x in A.re (to mli)
-        LineMarkerInfo<?> r1 = reMarkers.get(1);
-        assertEquals("Declare let/val", r1.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTING, r1.getIcon());
-        // val x in A.re
-        LineMarkerInfo<?> r2 = reMarkers.get(2);
-        assertEquals("Implements let/val", r2.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTED, r2.getIcon());
-        // let in A.re
-        RelatedItemLineMarkerInfo<?> r3 = (RelatedItemLineMarkerInfo<?>) reMarkers.get(3);
+        assertEquals(ORIcons.IMPLEMENTING, resMarkers.getFirst().getIcon());
+        assertEquals(7, resMarkers.getFirst().startOffset); // M->M.mli
+        assertEquals("Declare module", resMarkers.getFirst().getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, resMarkers.get(1).getIcon());
+        assertEquals("Implements let/val", resMarkers.get(1).getLineMarkerTooltip());
+        assertEquals(19, resMarkers.get(1).startOffset); // x[sig] -> x[impl]
+        assertEquals(ORIcons.IMPLEMENTING, resMarkers.get(2).getIcon());
+        assertEquals("Declare let/val", resMarkers.get(2).getLineMarkerTooltip());
+        assertEquals(19, resMarkers.get(2).startOffset); // x[sig] -> x.rei
+        RelatedItemLineMarkerInfo<?> r3 = (RelatedItemLineMarkerInfo<?>) resMarkers.get(3);
         assertTrue(r3.getLineMarkerTooltip().contains("Declare let/val"));
         assertEquals(ORIcons.IMPLEMENTING, r3.getIcon());
         // targets both definitions (signatures in ml and mli)
         List<? extends GotoRelatedItem> r3RelatedItems = new ArrayList<>(r3.createGotoRelatedItems());
         assertSize(2, r3RelatedItems);
-        assertInstanceOf(r3RelatedItems.get(0).getElement(), RPsiLet.class);
+        assertInstanceOf(r3RelatedItems.getFirst().getElement(), RPsiLet.class);
         assertInstanceOf(r3RelatedItems.get(1).getElement(), RPsiLet.class);
     }
 
@@ -370,64 +374,62 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
     // Module signature with named signature type
     @Test
     public void test_GH_485_named_signature_module_type() {
-        FileBase mli = configureCode("A.rei", """
+        FileBase resi = configureCode("A.resi", """
                 module type MT = {
-                  let x: int;
+                  let x: int
                 };
                 """);
-        FileBase ml = configureCode("A.re", """
+        FileBase res = configureCode("A.res", """
                 module type MT = {
-                  let x : int;
+                  let x : int
                 };
                 
                 module Mm: MT = {
-                  let x = 1;
+                  let x = 1
                 };
                 """);
 
-
-        myFixture.openFileInEditor(mli.getVirtualFile());
+        myFixture.openFileInEditor(resi.getVirtualFile());
         myFixture.doHighlighting();
-        List<LineMarkerInfo<?>> mliMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), getProject());
+        List<LineMarkerInfo<?>> resiMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), getProject());
 
-        myFixture.openFileInEditor(ml.getVirtualFile());
+        myFixture.openFileInEditor(res.getVirtualFile());
         myFixture.doHighlighting();
-        List<LineMarkerInfo<?>> mlMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), getProject());
+        List<LineMarkerInfo<?>> resMarkers = DaemonCodeAnalyzerImpl.getLineMarkers(myFixture.getEditor().getDocument(), getProject());
 
-        assertSize(2, mliMarkers);
-        assertSize(6, mlMarkers);
+        assertSize(2, resiMarkers);
+        assertSize(6, resMarkers);
 
         // module type in A.rei
-        RelatedItemLineMarkerInfo<?> mi1 = (RelatedItemLineMarkerInfo<?>) mliMarkers.get(0);
+        RelatedItemLineMarkerInfo<?> mi1 = (RelatedItemLineMarkerInfo<?>) resiMarkers.getFirst();
         assertTextEquals("Implements module", mi1.getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTED, mi1.getIcon());
         List<? extends GotoRelatedItem> mi1RelatedItems = new ArrayList<>(mi1.createGotoRelatedItems());
         assertSize(2, mi1RelatedItems);
         assertContainsElements(mi1RelatedItems.stream().map(m -> ((RPsiInnerModule) m.getElement()).getQualifiedName()).toList(), "A.MT", "A.Mm");
         // module type in A.re
-        LineMarkerInfo<?> m0 = mlMarkers.get(0);
-        assertEquals("Declare module", m0.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTING, m0.getIcon());
-        LineMarkerInfo<?> m1 = mlMarkers.get(1);
-        assertEquals("Implements module", m1.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTED, m1.getIcon());
+        LineMarkerInfo<?> m0 = resMarkers.getFirst();
+        assertEquals("Implements module", m0.getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, m0.getIcon());
+        LineMarkerInfo<?> m1 = resMarkers.get(1);
+        assertEquals("Declare module", m1.getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, m1.getIcon());
         // val x in module type in A.re
-        LineMarkerInfo<?> m2 = mlMarkers.get(2);
-        assertEquals("Declare let/val", m2.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTING, m2.getIcon());
+        LineMarkerInfo<?> m2 = resMarkers.get(2);
+        assertEquals("Implements let/val", m2.getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTED, m2.getIcon());
         // val x in module type in A.re
-        LineMarkerInfo<?> m3 = mlMarkers.get(3);
-        assertEquals("Implements let/val", m3.getLineMarkerTooltip());
-        assertEquals(ORIcons.IMPLEMENTED, m3.getIcon());
+        LineMarkerInfo<?> m3 = resMarkers.get(3);
+        assertEquals("Declare let/val", m3.getLineMarkerTooltip());
+        assertEquals(ORIcons.IMPLEMENTING, m3.getIcon());
         // val x in A.re (to mli)
-        LineMarkerInfo<?> m4 = mlMarkers.get(4);
+        LineMarkerInfo<?> m4 = resMarkers.get(4);
         assertEquals("Declare module", m4.getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTING, m4.getIcon());
         // let in A.re
-        LineMarkerInfo<?> m5 = mlMarkers.get(5);
+        LineMarkerInfo<?> m5 = resMarkers.get(5);
         assertEquals("Declare let/val", m5.getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTING, m5.getIcon());
-
     }
 
     // https://github.com/giraud/reasonml-idea-plugin/issues/485
@@ -451,7 +453,7 @@ public class LineMarkerProviderRESTest extends ORBasePlatformTestCase {
         assertSize(2, lineMarkers);
 
         // let x
-        LineMarkerInfo<?> m0 = lineMarkers.get(0);
+        LineMarkerInfo<?> m0 = lineMarkers.getFirst();
         assertEquals("Implements let/val", m0.getLineMarkerTooltip());
         assertEquals(ORIcons.IMPLEMENTED, m0.getIcon());
         // let x
